# Convince_simple_bts

./: .gitignore  CMakeLists.txt  Dockerfile  FakeBattery.xml  README.md  docker-compose.yml
BT/: simple_bt.xml
ROS2MonitoringFiles/: monitor.yaml
conf/: FakeBattery.xml
ros2prova/: cleanup.sh  compile.sh  cyclone_dds_settings.xml  robotinterface.xml
ros2prova/BT/: bt_convince v1.xml  simple_bt.xml
ros2prova/alarm_battery_low_skill/: CMakeLists.txt
ros2prova/alarm_battery_low_skill/include/: AlarmBatteryLowSkill.h
ros2prova/alarm_battery_low_skill/src/: AlarmBatteryLowSkill.cpp  main.cpp
ros2prova/battery_drainer_component/: CMakeLists.txt
ros2prova/battery_drainer_component/src/: BatteryDrainerComponent.cpp  main.cpp
ros2prova/battery_drainer_skill/: CMakeLists.txt
ros2prova/battery_drainer_skill/include/: BatteryDrainerDataModel.h  BatteryDrainerSkill.h
ros2prova/battery_drainer_skill/src/: BatteryDrainerDataModel.cpp  BatteryDrainerSkill.cpp  BatteryDrainerSkillSM.scxml  main.cpp
ros2prova/battery_level_skill/: CMakeLists.txt
ros2prova/battery_level_skill/include/: BatteryLevelDataModel.h  BatteryLevelSkill.h
ros2prova/battery_level_skill/src/: BatteryLevelDataModel.cpp  BatteryLevelSkill.cpp  BatteryLevelSkillSM.scxml  main.cpp
ros2prova/bt_executable/: CMakeLists.txt  package.xml
ros2prova/bt_executable/src/: main.cpp
ros2prova/bt_interfaces/: CMakeLists.txt
ros2prova/bt_interfaces/msg/: RequestAck.msg
ros2prova/bt_interfaces/srv/: RequestAck.srv
ros2prova/bt_nodes/: CMakeLists.txt
ros2prova/bt_nodes/include/: ROS2Action.h  ROS2Condition.h  ROS2Node.h
ros2prova/bt_nodes/src/: ROS2Action.cpp  ROS2Condition.cpp  ROS2Node.cpp
ros2prova/check_network_skill/include/: CheckNetworkDataModel.h  CheckNetworkSkill.h
ros2prova/check_network_skill/src/: CheckNetworkDataModel.cpp  CheckNetworkSkill.cpp
ros2prova/dummy_skill/: CMakeLists.txt  package.xml
ros2prova/dummy_skill/include/: DummySkill.h
ros2prova/dummy_skill/src/: DummySkill.cpp  main.cpp
ros2prova/fake_battery/: CMakeLists.txt  package.xml
ros2prova/fake_battery/src/: FakeBattery.cpp  main.cpp
ros2prova/launch/: bt_launch.py  bt_launch_network.py
ros2prova/other_interfaces/: CMakeLists.txt
ros2prova/other_interfaces/srv/: BatteryStatusSet.srv  SetBatteryStatus.srv  SetBatteryVoltage.srv
ros2prova/start_services_skill/include/: StartServicesDataModel.h  StartServicesSkill.h
ros2prova/start_services_skill/src/: StartServicesDataModel.cpp  StartServicesSkill.cpp  StartServicesSkillSM.scxml
ros2prova/stop_services_skill/include/: StopServicesDataModel.h  StopServicesSkill.h
ros2prova/stop_services_skill/src/: StopServicesDataModel.cpp  StopServicesSkill.cpp  StopServicesSkillSM.scxml
src/: CMakeLists.txt
src/AlarmBatteryLow/: AlarmBatteryLowSkill.cpp  CMakeLists.txt
src/AlarmBatteryLowSkill/: AlarmBatteryLowSM.scxml  AlarmBatteryLowSkill.h  main.cpp
src/BT/: CMakeLists.txt  main.cpp
src/BTProtocol/: CMakeLists.txt
src/BatteryDrainerComponent/: BatteryDrainerComponent.cpp  CMakeLists.txt
src/BatteryDrainerProtocol/: BatteryDrainerService.thrift  CMakeLists.txt
src/BatteryDrainerSkill/: BatteryDrainerDataModel.cpp  BatteryDrainerDataModel.h  BatteryDrainerSkill.cpp  BatteryDrainerSkill.h  BatteryDrainerSkillSM.scxml  CMakeLists.txt  main.cpp
src/BatteryLevelSkill/: BatteryLevelDataModel.cpp  BatteryLevelDataModel.h  BatteryLevelSkill.cpp  BatteryLevelSkill.h  BatteryLevelSkill2.scxml  BatteryLevelSkillSM.scxml  CMakeLists.txt  main.cpp
src/GoToProtocol/: CMakeLists.txt  GoTo.thrift
src/IsAtSkill/: CMakeLists.txt  IsAtSkill.cpp  IsAtSkill.h  IsAtSkillDataModel.cpp  IsAtSkillDataModel.h  IsAtSkillStateMachine.scxml  main.cpp
src/StopAndWaitSkill/: CMakeLists.txt  StopAndWaitSM.scxml  StopAndWaitSkill.cpp  StopAndWaitSkill.h  main.cpp
